Fixed possible overlap issue for game info bar

--- a/Styles.css
+++ b/Styles.css
@@ -28,6 +28,7 @@ body {
     position: fixed;
     padding: 0.5em;
     width: 100%;
+    z-index: 1;
 }
 
 .info-block {
